Update 02. Exploração do Mercado.md
Signed-off-by: Pacheco-77 <wamberson.si@outlook.com>

--- a/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/02. Exploração do Mercado.md
+++ b/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/02. Exploração do Mercado.md
@@ -1,1 +1,62 @@
+## **A) Análise SWOT**
+
+<div align="center">
+  <img src="https://github.com/user-attachments/assets/6da5c2a9-0aa4-4227-9b7a-de98ddcb9b88" style="width:700px;">
+</div>
+
+### Forças 
++ O aplicativo conecta produtores e consumidores diretamente,  sem intermediários os preços ficam mais justos;
++ Alto crescimento em interesse em produtos livres de agrotóxicos;
++ Foco em fornecedores locais, assim incentivando a economia local;
++ Avaliação e feedbacks, trazendo maior confiança para o cliente.
+  
+### Fraquezas
++ Logística de entrega, pois entregar alimentos perecíveis necessita de um cuidado rigoroso;
++ Falta de internet entre produtores;
++ Produtores podem resistir ao uso da tecnologia ou preferir vendas diretas.
+
+  
+### Oportunidades 
++ Pessoas buscam produtos mais saudáveis e sustentáveis ;
++ Parcerias com cooperativas;
++ Expansão como assinatura de cestas, feira virtual, cursos para agricultores, atendimento com nutricionista online e outros;
++ Incentivo governamental ou de empresas privadas. 
+
+### Ameaças
+
++ Concorrências com grandes Marketplace;
++ Aumento do custo dos produtos, por causas naturais ou não a produção pode ficar mais escassa, aumentando o custo dos produtos  pra venda;
++ Problemas logísticos de entrega, atraso ou entregas mal feitas pode prejudicar a reputação do aplicativo.
+
+## **B) Identificação Visual de Soluções Existentes**
+
+### Concorrente 1
++ Aplicativo: Quintal Saudáveis 
++ Descrição: Um aplicativo que conecta produtores de orgânicos com consumidores, utilizando geolocalização. 
++ Público Alvo: Agricultores próximos aos grandes centros e adultos que buscam alimentos naturais e orgânicos no conforto de suas casas.
+![quintal](https://github.com/user-attachments/assets/f6f98d4a-19cd-4af5-9ae8-937c7894e9bf)
+
+### Concorrente 2
++ Plataforma: https://ciorganicos.com.br
++ Descrição: Uma plataforma online com informações sobre certificação de produtos orgânicos e como comprá-los.  
++ Público Alvo: Os produtores e consumidores de alimentos orgânicos como jovens, adultos, além de outros atores do mercado.
+    
+![image](https://github.com/user-attachments/assets/00a39ed4-455d-4963-b057-924d29e22c45)
+
+### Concorrente 3
++ Aplicativo: Daki | Supermercado rápido
++ Descrição: : Daki é um supermercado completo e online, com opção de entregas super rápidas que chegam em minutos para quem precisa com urgência,
+  ou opção de entregas agendadas para os mais organizados.
++ Público Alvo: É bastante diverso, incluindo jovens solteiros, famílias inteiras, pessoas de baixa e alta renda, dentre muitos outros.
+![image](https://github.com/user-attachments/assets/91a2e788-3af6-4e54-b1e4-92ece895c0ed)
+
+## C) Quadro Comparativo de Soluções Existentes
+
+| Critérios / Soluções     | Solução A (Concorrente 1)     | Solução B (Concorrente 2)     | Solução C (Concorrente 3)     | Nossa Solução            |
+|--------------------------|-------------------------------|-------------------------------|-------------------------------|--------------------------|
+| Modelo de negócio        |  Assinatura                   |  B2C                          | B2C                           | Freemium                 |
+| Tecnologia utilizada     |  Mobile                       |  Web                          | Mobile                        | Mobile                   |
+| Público-alvo             |  Agricultores / Adultos / jovens| Agricultores / Adultos        |  Agricultores / Jovens      | Agricultores / Produtores / Jovens / Adultos / Idosos   |
+| Pontos fortes            | Notificações Push / Integração com Redes Sociais | Variedade de Produtos  |   Variedade de Produtos / Velocidade de entregas |  Velocidade de entregas / Tutorias |
+| Pontos fracos / limitações | Limite de areas de entrega   | Dificuldade em comprar os serviços  | Limitada a franquias   | Não possui variedade de produtos |
 
