Update 03. Personas - Conhecendo o Usuário.md
Signed-off-by: Pacheco-77 <wamberson.si@outlook.com>

--- a/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
+++ b/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
@@ -1,1 +1,18 @@
+Conhecendo o usuário – Persona
+
+### PERSONA JÚLIA
+Breve resumo
+![image](https://github.com/user-attachments/assets/9a32335c-9e52-4e7d-aa8c-747907257621)
+
+### PERSONA JOÃO MENDES
+Breve resumo
+![image](https://github.com/user-attachments/assets/36786032-d13f-4cb3-97e6-006bb94fce92)
+
+### PERSONA ANA OLIVEIRA
+Breve resumo
+![image](https://github.com/user-attachments/assets/cea0135b-3827-4f2d-9da5-1fb50dd914f0)
+
+### PERSONA 4
+
+### PERSONA 5
 
