Update 03. Personas - Conhecendo o Usuário.md
Signed-off-by: Pacheco-77 <wamberson.si@outlook.com>

--- a/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
+++ b/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
@@ -1,11 +1,18 @@
-Conhecendo o usuário – Persona
+## Conhecendo o usuário – Persona
 
 ### PERSONA JÚLIA
-Breve resumo
+Júlia é uma jovem nutricionista, representa os Usuários Consumidor Free. Ela é Técnica em Nutrição e Educadora Física, então está sempre em busca de formas mais saudáveis e conscientes de se alimentar.Ela é curiosa, prática e conectada – gosta de descobrir novos produtos e produtores locais online, gosta de alimentos naturais, frescos e de origem confiável, mas muitas vezes tem dificuldade em encontrar por preços acessíveis. Tem também medo de comprar de produtores que não conhece pessoalmente.
+O plano gratuito do aplicativo é a porta de entrada perfeita para ela, pois permite pesquisar, comparar e conhecer os produtores, como João Mendes, que cultivam com responsabilidade
+
+
 ![image](https://github.com/user-attachments/assets/9a32335c-9e52-4e7d-aa8c-747907257621)
 
+
 ### PERSONA JOÃO MENDES
-Breve resumo
+João Mendes é a persona que representa os Usuários Produtores que irão oferecer seus produtos no OrganoLife, ele é um agricultor familiar com ensino fundamental incompleto, que reside e trabalha na zona rural. Ele se descreve como teimoso, trabalhador, simples e honesto. Tem grande respeito pela terra e seus frutos, plantando alimentos organicamente sem o uso de agrotóxicos.
+Apesar do orgulho que sente por sua profissão, João tem dificuldade em vender seus produtos diretamente aos consumidores. Seu pior pesadelo é ver seus produtos serem desperdiçados por falta de compradores. Ele se preocupa com a saúde das pessoas que consomem seus alimentos e com o impacto ambiental causado pelo uso de técnicas agrícolas convencionais. 
+Para João, o aplicativo é uma forma de entrar em novos mercados e valorizar seu método de produção, alcançando os consumidores com seus valores.
+
 ![image](https://github.com/user-attachments/assets/36786032-d13f-4cb3-97e6-006bb94fce92)
 
 ### PERSONA ANA OLIVEIRA
