Update 03. Personas - Conhecendo o Usuário.md
Signed-off-by: Ana Paula  <gxavierana@gmail.com>

--- a/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
+++ b/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
@@ -17,9 +17,11 @@ Para João, o aplicativo é uma forma de entrar em novos mercados e valorizar se
 
 ### PERSONA ANA OLIVEIRA
 Breve resumo
-![image](https://github.com/user-attachments/assets/cea0135b-3827-4f2d-9da5-1fb50dd914f0)
+![Persona Ana](https://github.com/user-attachments/assets/d540de04-a389-4183-aa3a-ab66faa96f98)
+
 
 ### PERSONA 4
+![Persona Camila](https://github.com/user-attachments/assets/2fe8c119-095d-43a7-a67c-4b81a1ad3f5d)
 
 ### PERSONA 5
 
