Update 03. Personas - Conhecendo o Usuário.md
Signed-off-by: Ana Paula  <gxavierana@gmail.com>

--- a/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
+++ b/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
@@ -1,8 +1,7 @@
 ## Conhecendo o usuário – Persona
 
 ### PERSONA JÚLIA
-Júlia é uma jovem nutricionista, representa os Usuários Consumidor Free. Ela é Técnica em Nutrição e Educadora Física, então está sempre em busca de formas mais saudáveis e conscientes de se alimentar.Ela é curiosa, prática e conectada – gosta de descobrir novos produtos e produtores locais online, gosta de alimentos naturais, frescos e de origem confiável, mas muitas vezes tem dificuldade em encontrar por preços acessíveis. Tem também medo de comprar de produtores que não conhece pessoalmente.
-O plano gratuito do aplicativo é a porta de entrada perfeita para ela, pois permite pesquisar, comparar e conhecer os produtores, como João Mendes, que cultivam com responsabilidade
+Júlia é uma jovem nutricionista, representa o Usuário Profiissional - Nutricionista . Ela é Técnica em Nutrição e Educadora Física, é dedicada, empática e apaixonada por promover saúde por meio da comida de "verdade" , acredita que a nutrição vai além da estética, está ligada à qualidade de vida, ao cuidado com o próximo e ao respeito pelo meio ambiente. Júlia está sempre em busca de formas para indicar alimentos mais naturais, sem agrotóxicos e de origem confiável para seus pacientes. Uma das suas maiores frustrações é a dificuldade de conectar quem quer se alimentar melhor com produtores realmente comprometidos com a saúde e a sustentabilidade. Por isso, Júlia decidiu apoiar o OrganoLife e atender e indicar o aplicativo aos seus pacientes, por ser uma forma de ajudar seus pacientes a encontrarem receitas saúdaveis e personalizadas para cada pessoa e a facilidade em encontrar produtos livres de agrotóxicos.
 
 
 ![image](https://github.com/user-attachments/assets/9a32335c-9e52-4e7d-aa8c-747907257621)
@@ -16,11 +15,12 @@ Para João, o aplicativo é uma forma de entrar em novos mercados e valorizar se
 ![image](https://github.com/user-attachments/assets/36786032-d13f-4cb3-97e6-006bb94fce92)
 
 ### PERSONA ANA OLIVEIRA
-Breve resumo
+
 ![Persona Ana](https://github.com/user-attachments/assets/d540de04-a389-4183-aa3a-ab66faa96f98)
 
 
-### PERSONA 4
+### PERSONA Camila Borges
+
 ![Persona Camila](https://github.com/user-attachments/assets/2fe8c119-095d-43a7-a67c-4b81a1ad3f5d)
 
 ### PERSONA 5
