Update 03. Personas - Conhecendo o Usuário.md
Signed-off-by: Ana Paula  <gxavierana@gmail.com>

--- a/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
+++ b/SPRINT 01/02 - DESIGN THINKING/FASE 1 - INSPIRAÇÃO/03. Personas - Conhecendo o Usuário.md
@@ -22,9 +22,14 @@ que trabalha com consultoria para produtores rurais e é apaixonada por alimenta
 ![Persona Ana](https://github.com/user-attachments/assets/d540de04-a389-4183-aa3a-ab66faa96f98)
 
 
-### PERSONA Camila Borges
+### PERSONA CAMILA BORGES
+Camila Borges representa o Usuário Consumidor Premium, ela é uma advogada com uma agenda de trabalho agitada, repleta de reuniões, viagens e compromissos e, mesmo com sua agenda lotada, ela ainda prioriza sua saúde e se esforça para manter uma dieta limpa e saudável. Assinante do plano premium da plataforma, ela preza pela praticidade, personalização e soluções que otimizem o tempo sem abrir mão da qualidade da comida. Para Camilla, o aplicativo ideal une saúde, praticidade e tecnologia de forma personalizada, permitindo que ela mantenha uma alimentação equilibrada mesmo quando não tem muito tempo.
 
 ![Persona Camila](https://github.com/user-attachments/assets/2fe8c119-095d-43a7-a67c-4b81a1ad3f5d)
 
-### PERSONA 5
+### PERSONA LETÍCIA SANTOS
+Letícia Santos representa Usuário Consumidor Free, ela trabalha como assistente administrativa em uma escola pública, é organizada e preocupada com a saúde, ela busca praticidade e consumo consciente no seu dia a dia. Letícia evita alimentos com agrotóxicos ou ultraprocessados, mas enfrenta dificuldades em encontrar produtos naturais confiáveis e acessíveis. Como usuária free, ela valoriza recursos funcionais e acessíveis, sem exigência de pagamento, desde que ofereçam praticidade, rastreamento de pedidos e confiança na origem dos produtos.
+
+![Persona Letícia](https://github.com/user-attachments/assets/a0ffcf77-f6f5-40c2-bb2a-1ec0278f2d46)
+
 
